// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperErrorText Renders the UI snapshot correctly 1`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={false}
  id="basic"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 2`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="invalid"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 3`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="invalid"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "This helper text <b>contains HTML in the string</b>.",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 4`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="invalid"
>
  This helper text 
  <b>
    contains HTML
  </b>
  .
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 5`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-10g9ftz"
  data-isinvalid={false}
  id="chakra"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Text",
      }
    }
  />
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 6`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={false}
  data-testid="props"
  id="props"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Text",
      }
    }
  />
</div>
`;
